Fix browser ui body being too large, changing the page background

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -149,6 +149,8 @@ body {
     caret-color: var(--text-color);
     margin: 0;
     padding: 0;
+
+    height: fit-content;
     
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12pt;
